--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
   <body>
     <div class="card">
-      <div class="background-heading"></div>
+      <div class="cover">
+        <div class="background-heading"></div>
+        <div class="alpha"></div>
+      </div>
       <div class="content">
         <h1 class="main-heading">
           Get <span style="color: hsl(277, 64%, 61%)">insights</span> that help
@@ -46,7 +49,6 @@
           </div>
         </div>
       </div>
-      <div class="background1-heading"></div>
     </div>
   </body>
 </html>
